# pybuilder

./: .gitignore  README.md  pyproject.toml  requirements.txt  sitecustomize.py
scripts/: env-dump.py  invocation-test.sh  rebuild-appimage.sh  test-segfault.py
src/pybuilder/: __init__.py
src/pybuilder/config/: constants.py
src/pybuilder/images/: __init__.py  _constants.py  constants.py  manylinux.py
templates/: AppRun
templates/3.10/: AppRun
templates/3.12/: AppRun
