[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pybuilder"
description = "Build python AppImages"
requires-python = ">=3.12"
dynamic = ["readme", "version"]
dependencies = ["docker"]

[tool.setuptools.dynamic]
version = { attr = "pybuilder.__version__" }
readme = { file = ["README.md"], content-type = "text/markdown" }
